conformance/tests/gateway-invalid-default-frontend-client-certificate-validation.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: invalid-default-client-validation-config
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  tls:
    frontend:
      default:
        validation:
          caCertificateRefs:
          - kind: ConfigMap
            group: ""
            name: does-not-exist
      perPort:
      - port: 80
        tls:
          validation:
            caCertificateRefs:
            - kind: ConfigMap
              group: ""
              name: tls-validity-checks-per-port-ca-certificate
  listeners:
  - name: https
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: tls-validity-checks-certificate
        namespace: gateway-conformance-infra
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invalid-default-client-validation-config
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: invalid-default-client-validation-config
  hostnames:
  - example.org
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
